# agentlift

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  live-demo.yml
benchmarks/: results.md  run_benchmark.py
demo/: README.md  portability-demo.ps1  portability-demo.sh
docs/: anthropic-mapping.md  convention.md  deploy-bedrock.md  deploy-google.md  deploying.md  how-it-works.md  import.md  import_plan.md  limitations.md  provider-matrix.md  tested-platforms.md
examples/: README.md
examples/claude-code-skill/deploy-managed-agents/: SKILL.md
examples/deploy-workflow/: ci-deploy.yml
examples/in-a-project/: CLAUDE.md  README.md
examples/in-a-project/.claude/agents/: pr-reviewer.md
examples/in-a-project/.managed-agents/fact-checker/: agent.md
examples/in-a-project/.managed-agents/orchestrator/: agent.md
examples/in-a-project/.managed-agents/researcher/: agent.md
examples/in-a-project/.managed-agents/shared/skills/cite-sources/: SKILL.md
examples/in-a-project/.managed-agents/shared/skills/house-style/: SKILL.md
examples/in-a-project/.managed-agents/summarizer/: agent.md
examples/in-a-project/src/: app.py
examples/quickstart/.managed-agents/knowledge-agent/: agent.md
examples/quickstart/.managed-agents/knowledge-agent/knowledge/: pm-basics.md
examples/team/: .agentlift-google.json
examples/team/.agents/bug-finder/: agent.md
examples/team/.agents/lead/: agent.md
examples/team/.managed-agents/bug-finder/: agent.md
examples/team/.managed-agents/researcher/: agent.md  mcp.json
examples/team/.managed-agents/shared/: mcp.json
experiments/bedrock-composition/: RESULTS.md  bedrock_strands_subagents.py
experiments/claude-on-vertex/: RESULTS.md  claude_on_vertex_construct.py  claude_on_vertex_deploy.py
experiments/import-roundtrip/: prototype_import.py  test_roundtrip.py
experiments/subagent-composition/: RESULTS.md  google_adk_subagents.py  openai_agent_as_tool.py
src/agentlift/: __init__.py  anthropic_source.py  anthropic_target.py  audit.py  bedrock_codegen.py  bedrock_lock.py  bedrock_plan.py  bedrock_target.py  capabilities.py  cli.py  diagnostics.py  diff.py  export.py  folder_writer.py  google_codegen.py  google_lock.py  google_plan.py  google_target.py  graders.py  harness_lock.py  harness_plan.py  harness_source.py  harness_target.py  import_model.py  importer.py  lockfile.py  model.py  parser.py  planner.py  runtime.py
src/skylift/: __init__.py  anthropic_target.py  cli.py  cost.py  diagnostics.py  diff.py  lockfile.py  model.py  parser.py  planner.py  runtime.py
tests/: conftest.py  import_fixtures.py  test_audit.py  test_bedrock_codegen.py  test_bedrock_hosted.py  test_bedrock_lock.py  test_bedrock_plan.py  test_bedrock_target.py  test_cli_bedrock.py  test_cli_bedrock_deploy.py  test_cli_google.py  test_cli_harness.py  test_cli_import.py  test_cost.py  test_coverage_matrix_plan.py  test_diff.py  test_doc_links.py  test_examples.py  test_export.py  test_google_codegen.py  test_google_lock.py  test_google_plan.py  test_google_target.py  test_harness_lock.py  test_harness_plan.py  test_harness_receipt.py  test_harness_target.py  test_idempotency.py  test_import_roundtrip.py  test_import_source.py  test_importer.py  test_isolation.py  test_live_harness_classify.py  test_live_harness_orchestration.py  test_live_runtime_orchestration.py  test_parser.py  test_permissions.py  test_planner.py  test_runtime_receipt.py
tests/fixtures/bad-skill/.managed-agents/x/: agent.md
tests/fixtures/gmail-agent/: .mcp.json  CLAUDE.md
tests/fixtures/isolation/: CLAUDE.md
tests/fixtures/isolation/.managed-agents/alpha/: agent.md
tests/fixtures/isolation/.managed-agents/beta/: agent.md
tests/fixtures/mcp-auth/.managed-agents/api/: agent.md  mcp.json
tests/fixtures/mcp-perm/.managed-agents/ops/: agent.md  mcp.json
tests/live/: README.md  coverage_matrix.py  harness.py  runtime.py  test_coverage_matrix.py  test_deploy_run.py  test_harness.py  test_import_anthropic.py  web_tools.py
tests/live/receipts/20260604-002527-anthropic/: receipt.json
tests/live/receipts/20260604-004318-google/: events.jsonl  receipt.json
tests/live/receipts/20260604-005405-anthropic/: events.jsonl  receipt.json
tests/live/receipts/20260604-012428-anthropic/: events.jsonl  receipt.json
tests/live/receipts/20260604-115352-web-google/: events.jsonl  receipt.json
tests/live/receipts/20260605-121525-harness-bedrock/: events.jsonl  receipt.json
tests/live/receipts/20260605-133821-runtime-bedrock/: invocations.jsonl  receipt.json
tests/live/receipts/20260605-134012-runtime-bedrock/: invocations.jsonl  receipt.json
(+27 files in other folders)
