[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlift"
version = "0.4.1"
description = "Own your agent as a neutral folder; audit its portability, compile it to provider formats (Anthropic YAML / Google ADK), and deploy it to managed runtimes. Own the definition, rent the runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pawel Huryn" }]
keywords = ["anthropic", "claude", "agents", "managed-agents", "llm", "deploy", "agent-sdk", "mcp", "skills", "portability", "vertex-ai", "adk", "agent-engine", "ant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "anthropic>=0.105.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/phuryn/agentlift"
Repository = "https://github.com/phuryn/agentlift"

[project.scripts]
agentlift = "agentlift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentlift = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "live: tests that hit the real Anthropic API (require ANTHROPIC_API_KEY; cost a few cents)",
]
testpaths = ["tests"]
